# cloning

./: CMakeLists.txt  README.md  biicode.conf  cloning.hpp  test.cpp
test/: basic.cpp
